<resources>
    <string name="app_name">QuickDeals</string>
    <string name="reminder_title_setter">Type, what deal you have to do!</string>
    <string name="summary_text">QuickDeals</string>
    <string name="big_text">Don\'t\ forget!</string>
    <string name="content_text">The deadline for notifying you about </string>
    <string name="big_content_title">Whoop-whoop! </string>
    <string name="notify_title">Notify:</string>
    <string name="notify_in_time">Notify in time</string>
    <string name="push_notif">Push notification</string>
    <string name="second_alarm_text">Set Alarm</string>
    <string name="reminder_dialog_header">ADD REMINDER</string>
    <string name="empty_reminder_layout_header">There is no reminder yet.</string>
    <string name="spinner_header_title">Select the icon of notification…</string>
    <string name="s_spinner_header_title">Icons of notification</string>
    <string name="review_icon">Icon:</string>
    <string name="review_title">Title: </string>
    <string name="review_desc">Note: </string>
    <string name="review_time">Time: </string>
    <string name="review_repeat">Inform: </string>
    <string name="review_alarm">Alarm:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello, let\'s\ continue!</string>

    <string name="start_activity_image">Time-dependent image of the starting activity</string>
    <string name="no_reminders_image">An image indicating the absence of reminders</string>
    <string name="dcc_title">An image for DCC title</string>
    <string name="action_settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="delete">DELETE</string>
    <string name="reminder_title">Reminder</string>
</resources>
